4017 and 4022 and NOT `Johnson` but rather `Ring` counters. (fix package name)